# mlops-pipeline-churn-prediction

./: .gitignore  .replit  Dockerfile  README.md  WALKTHROUGH.md  app.py  docker-compose.yml  pyproject.toml
src/: cloud_deployer.py  data_generator.py  data_processor.py  model_evaluator.py  model_monitor.py  model_trainer.py
