[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "azure-storage-blob>=12.24.1",
    "boto3>=1.36.24",
    "google-cloud-storage>=3.0.0",
    "mlflow>=2.20.2",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.6.1",
    "streamlit>=1.42.1",
    "twilio>=9.4.5",
]
